--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Sägenkarta - Institutet för språk och folkminnen</title>
+    <title>Folkmusik - Institutet för språk och folkminnen</title>
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="dcterms.identifier" content="http://www.sprakochfolkminnen.se" />
@@ -115,7 +115,7 @@
                         <div id="Meny">
                             <!-- Meny -->
                         </div>
-                        <ul class="sv-defaultlist">
+                        <ul class="sv-defaultlist" style="display: none">
                             <li class="sv-inline">
                                 <a href="http://www.sprakochfolkminnen.se/test-och-utveckling/kartor/sagenkarta/avancerad-version.html" class="normal" style="display:block">Avancerad version</a></li>
                             <li class="sv-inline">
@@ -126,7 +126,7 @@
                         <div id="Meny1">
                             <!-- Meny 1 -->
                         </div>
-                        <ul class="sv-defaultlist">
+                        <ul class="sv-defaultlist" style="display: none">
                             <li class="sv-inline">
                                 <a href="http://www.sprakochfolkminnen.se/test-och-utveckling/kartor/matkarta.html" class="normal" style="display:block">Matkarta</a></li>
                             <li class="sv-inline">
